--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -475,7 +475,7 @@
 <!--消息卡片列表-->
 <template name="messageList">
   <view class="beAddedContacts">
-    <view class="messageList flex" catchtap="{{item.event}}" data-type="{{item.type_id}}">
+    <view class="messageList flex" catchtap="{{item.event}}" data-type="{{item.type_id}}" hover-class="t-hoverColor"> 
       <view class="flex title">
         <image class="title_icon" src="{{item.iconPath}}"></image>
         <view class="title">
@@ -581,14 +581,11 @@
         <view class="projectInfo flex" wx:if="{{type == 0}}">
           <view class="seeNum">{{item.view_count}}人看过项目</view>
           <view class="interest flex">
-            <!-- <view class="btnNoInterest" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
-            <view class="btnHaveInterest" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
-            <view class="haveInterest" wx:if="{{item.handle_status == 1}}">感兴趣</view> -->
-            <view class="addProjectTo not-interestedm" catchtap="addProjectLibrary" data-push="{{item.push_id}}" data-project="{{item.project_id}}" wx:if="{{item.import_status  == 0}}">加入项目库</view>
+            <view class="addProjectTo not-interestedm" catchtap="addProjectLibrary" data-push="{{item.push_id}}" data-project="{{item.project_id}}" wx:if="{{item.import_status  == 0}}" hover-class="t-hoverColor">加入项目库</view>
             <view class="haveInterest" wx:if="{{item.import_status  == 1}}">已加入</view>
-            <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
-            <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
-            <view class="haveInterest " wx:if="{{item.handle_status == 1}}">感兴趣</view>
+            <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}"hover-class="t-hoverColor">没兴趣</view>
+            <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}" hover-class="t-other-button-hover">联系项目方</view>
+            <view class="haveInterest " wx:if="{{item.handle_status == 1}}" hover-class="t-hoverColor">感兴趣</view>
           </view>
         </view>
         <!--我申请查看的项目  -->
@@ -605,10 +602,10 @@
           <view class="seeNum">{{item.view_count}}人看过项目</view>
           <view class="interest flex">
             <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
-            <view class="toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}">申请查看</view>
+            <view class="toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" catchtap="matchApply" data-content="{{0}}" hover-class="t-other-button-hover">申请查看</view>
             <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
             <view class="refuseToRead readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
-            <view class="toAccreditation project-applicationm" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
+            <view class="toAccreditation project-applicationm" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply" hover-class="t-hoverColor">重新申请</view>
           </view>
         </view>
         <view class="classname" wx:if="{{type == 3}}"></view>
@@ -722,7 +719,7 @@
           <!--申请查看我的样式  -->
           <view wx:if="{{type == 0}}">
             <view class="bottomTab flex" wx:if="{{item.handle_status == 0}}">
-              <view class="flex refuseBox" catchtap="btn" data-record="{{item.record_id}}" data-status="{{2}}">
+              <view class="flex refuseBox" catchtap="btn" data-record="{{item.record_id}}" data-status="{{2}}" hover-class='t-hoverColor'>
                 <image src="/img/icon-jujue@2x.png" class="iconStyle"></image>
                 <view class="refuseBtn rejectm">拒绝</view>
               </view>
