--- a/Weitianshi/pages/message/pushProject/pushProject.wxml
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxml
@@ -49,11 +49,11 @@
               <view class="projectInfo flex">
                 <view class="seeNum">{{item.view_count}}人看过项目</view>
                 <view class="interest flex">
-                  <view class="addProjectTo not-interestedm" catchtap="addProjectLibrary" data-push="{{item.push_id}}" data-project="{{item.project_id}}" wx:if="{{item.import_status  == 0}}">加入项目库</view>
+                  <view class="addProjectTo not-interestedm" catchtap="addProjectLibrary" data-push="{{item.push_id}}" data-project="{{item.project_id}}" wx:if="{{item.import_status  == 0}}" hover-class="t-hoverColor">加入项目库</view>
                   <view class="haveInterest" wx:if="{{item.import_status  == 1}}">已加入</view>
-                  <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}">没兴趣</view>
-                  <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}">联系项目方</view>
-                  <view class="haveInterest " wx:if="{{item.handle_status == 1}}">感兴趣</view>
+                  <view class="btnNoInterest not-interestedm" catchtap="noInteresting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{2}}" data-project="{{item.project_id}}" hover-class="t-hoverColor">没兴趣</view>
+                  <view class="btnHaveInterest interestedm" catchtap="interesting" data-push="{{item.push_id}}" wx:if="{{item.handle_status == 0||item.handle_status == 3}}" data-status="{{1}}" data-project="{{item.project_id}}" hover-class="t-other-button-hover">联系项目方</view>
+                  <view class="haveInterest " wx:if="{{item.handle_status == 1}}" hover-class="t-hoverColor">感兴趣</view>
                 </view>
               </view>
             </view>
@@ -85,6 +85,6 @@
     <view class="modalTitle">联系项目方</view>
     <textarea class="modalContent" placeholder="请描述您的意向约谈时间，方式" bindinput="contentProject" />
     <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
-    <view class="btn" bindtap="yesBtn">确定</view>
+    <view class="btn" bindtap="yesBtn" hover-class='t-other-button-hover'>确定</view>
   </view>
 </view>
