--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -199,9 +199,9 @@ page {
 }
 
 .blockInfo {
-  margin: 0 32rpx;
+  padding: 0 32rpx;
   height: 116rpx;
-  width: 90%;
+  width: 92%;
   border-bottom: 1rpx solid #e6e6e6;
   justify-content: space-between;
   align-items: flex-end;
