--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -206,7 +206,7 @@
     <view class="modalTitle">联系项目方</view>
     <textarea class="modalContent" placeholder="请简要描述您的意向约谈时间,方式" bindinput="contentProject" />
     <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
-    <view class="btn" bindtap="yesBtn">确定</view>
+    <view class="btn" bindtap="yesBtn" hover-class='t-other-button-hover'>确定</view>
   </view>
 </view>
 <!--没有更多-->
