--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -337,14 +337,13 @@ page {
 }
 
 .agreeBox {
-  padding-left: 94rpx;
+  padding: 28rpx 122rpx 30rpx 94rpx;
+  background: white;
 }
 
 .refuseBox {
-  padding-left: 88rpx;
-  padding-right: 122rpx;
-  /* width: 50%; */
-  border-right: 1rpx solid #e6e6e6;
+  background: white;
+  padding: 28rpx 134rpx 30rpx 88rpx;
 }
 
 .iconStyle {
@@ -460,10 +459,8 @@ page {
 
 .bottomTab {
   /* border-top: 1rpx solid #e6e6e6; */
-  padding-top: 28rpx;
-  padding-bottom: 30rpx;
-  background: white;
   border-radius: 4rpx;
+  background:white;
 }
 
 .user_apply {
