--- a/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
+++ b/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
@@ -40,9 +40,9 @@
 <textarea id="textContent" bindinput="leaveMessage" maxlength="500" placeholder="如需认证其他身份，可在此留言" />
 <image src="{{imgUrls}}" class="picAfter"></image>
 <view class="floatBtn">
-  <view class="btnYes" bindtap="btnYes" wx:if="{{status != 3}}">确定</view>
+  <view class="btnYes" bindtap="btnYes" wx:if="{{status != 3}}" hover-class='t-other-button-hover'>确定</view>
   <view class="flex backColor" wx:if="{{status == 3}}">
-    <view class="reaccreditation" bindtap="reaccreditation">重新认证</view>
-    <view class="reaccreditation no-border" bindtap="reaccreditationYes">确定</view>
+    <view class="reaccreditation" bindtap="reaccreditation"  hover-class='t-other-button-hover'>重新认证</view>
+    <view class="reaccreditation no-border" bindtap="reaccreditationYes"  hover-class='t-other-button-hover'>确定</view>
   </view>
 </view>
